<resources>
    <string name="app_name">Start with Russian</string>

    <!-- names of categories-->
    <string name="category_numbers">Numbers/Tsifry</string>
    <string name="category_colors">Colors/Tsveta</string>
    <string name="category_inside">Inside/Vnutri</string>
    <string name="category_outside">Outside/Snaruzhi</string>
    <string name="category_phrases">Phrases/Frases</string>
    <string name="category_animals">Animals/Zhivotnye</string>
    <string name="category_food">Food/Eda</string>
    <string name="category_travel">Travel/Puteshestviya</string>

    <!-- descriptions -->
    <string name="picture_of_a_number">Picture of a number</string>
    <string name="play">Play</string>

    <!-- numbers -->
    <string name="one">One/Odin</string>
    <string name="two">Two/Dva</string>
    <string name="three">Three/Tree</string>
    <string name="four">Four/Chetyry</string>
    <string name="five">Five/Pyat</string>
    <string name="six">Six/Shest</string>
    <string name="seven">Seven/Sem</string>
    <string name="eight">Eight/Vosem</string>
    <string name="nine">Nine/Devyat</string>
    <string name="ten">Ten/Desyat</string>

    <!-- colors -->
    <string name="red">Red/Krasniy</string>
    <string name="blue">Blue/Seeniy</string>
    <string name="yellow">Yellow/Zhyolti</string>
    <string name="green">Green/Zeleniyy</string>
    <string name="orange">Orange/Aranzheviy</string>
    <string name="purple">Purple/Feealyetaviy</string>
    <string name="pink">Pink/Rozaviy</string>
    <string name="brown">Brown/Kareechneviy</string>
    <string name="white">White/Belyy</string>
    <string name="black">Black/Chyorniy</string>

    <!-- inside -->
    <string name="room">Room/Komnata</string>
    <string name="kitchen">Kitchen/Kukhnya</string>
    <string name="bathroom">Bathroom/Vannaya</string>
    <string name="bed">Bed/Krovat</string>
    <string name="couch">Couch/Divan</string>
    <string name="tv">TV/Televizor</string>
    <string name="table">Table/Stol</string>
    <string name="chair">Chair/Stul</string>
    <string name="window">Window/Okno</string>
    <string name="door">Door/Dver</string>

    <!-- outside -->
    <string name="yard">Yard/Dvor</string>
    <string name="grass">Grass/Trava</string>
    <string name="tree">Tree/Derevo</string>
    <string name="sky">Sky/Nebo</string>
    <string name="clouds">Clouds/Oblaka</string>
    <string name="warm">Warm/Teplo</string>
    <string name="cold">Cold/Kholodno</string>
    <string name="hot">Hot/Zharko</string>
    <string name="rain">Rain/Dozhd</string>
    <string name="snow">Snow/Sneg</string>

    <!-- communication -->
    <string name="yes">Yes/Da</string>
    <string name="no">No/Net</string>
    <string name="eat">Eat/Kushay</string>
    <string name="letsgo">Let\'s go/Poydem</string>
    <string name="comehere">Come here/Idi syuda</string>
    <string name="howareyoudoing">How are you doing/Kak dela</string>
    <string name="good">Good/Khorosho</string>
    <string name="lets">Let\'s/Davay</string>
    <string name="itstime">It\'s time/Pora</string>
    <string name="thankyou">Thank you/Spasibo</string>

    <!-- animals -->
    <string name="dog">Dog/Sobaka</string>
    <string name="cat">Cat/Kot</string>
    <string name="chicken">Chicken/Kuritsa</string>
    <string name="fish">Fish/Ryba</string>
    <string name="deer">Deer/Olen</string>
    <string name="lion">Lion/lev</string>
    <string name="bear">Bear/Medved</string>
    <string name="elk">Elk/Los</string>
    <string name="elephant">Elephant/Slon</string>
    <string name="dinosaur">Dinosaur/Dinozavr</string>

    <!-- food -->
    <string name="breakfast">Breakfast/Zavtrak</string>
    <string name="lunch">Lunch/Obed</string>
    <string name="dinner">Dinner/Uzhin</string>
    <string name="cheese">Cheese/Syr</string>
    <string name="sausage">Sausage/Kolbasa</string>
    <string name="egg">Egg/Yaytso</string>
    <string name="tomato">Tomato/Pomidor</string>
    <string name="avocado">Avocado/Avacado</string>
    <string name="chips">Chips/Chipsy</string>
    <string name="grapes">Grapes/Vinograd</string>

    <!--travel -->
    <string name="car">Car/Mashina</string>
    <string name="train">Train/Poezd</string>
    <string name="plane">Plane/Samolet</string>
    <string name="bus">Bus/Avtobus</string>
    <string name="road">Road/Doroga</string>
    <string name="ticket">Ticket/Bilet</string>
    <string name="luggage">Luggage/Bagazh</string>
    <string name="city">City/Gorod</string>
    <string name="hotel">Hotel/Gostinitsa</string>
    <string name="museum">Museum/Muzey</string>

    <!-- upgrade available dialog -->
    <string name="upgrade_dialog">Improved app available for download</string>
    <string name="start_download">DOWNLOAD</string>
    <string name="cancel">CANCEL</string>






</resources>